--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -21,54 +21,82 @@ sites:
        maxResponseTime: 5000
        expectedStatusCodes:
         - 200
-     - name: SSH Singapore SGP 1
-       url: http://sg-1.opentunnel.net/
-       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+     - name: XRAY Singapore SGL 1
+       url: https://sgx-1.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/xray.png
        maxResponseTime: 5000
        expectedStatusCodes:
-        - 400
+        - 200
         - 500
-     - name: SSH United States USA 1
-       url: http://us-1.opentunnel.net/
-       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+     - name: XRAY Singapore SGO 1
+       url: https://sgx-2.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/xray.png
        maxResponseTime: 5000
        expectedStatusCodes:
-        - 400
+        - 200
         - 500
-     - name: SSH Singapore SGS 1
-       url: http://sggs-1.opentunnel.net/
-       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+     - name: XRAY United States USA 1
+       url: https://usx-1.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/xray.png
        maxResponseTime: 5000
        expectedStatusCodes:
-        - 400
+        - 200
         - 500
-     - name: SSH Germany DE 1
-       url: http://de-1.opentunnel.net/
-       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+     - name: XRAY South Korea KRP 1
+       url: https://krx-1.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/xray.png
        maxResponseTime: 5000
        expectedStatusCodes:
-        - 400
+        - 200
         - 500
-     - name: SSH Singapore SGP 2
-       url: http://sg-2.opentunnel.net/
-       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+     - name: XRAY Netherlands NLI 1
+       url: https://nlx-1.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/xray.png
        maxResponseTime: 5000
        expectedStatusCodes:
-        - 400
+        - 200
         - 500
-     - name: SSH Indonesia ID 1
-       url: http://id-1.opentunnel.net/
-       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+     - name: XRAY Indonesia IDA 1
+       url: https://idx-1.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/xray.png
        maxResponseTime: 5000
        expectedStatusCodes:
-        - 400
+        - 200
         - 500
-     - name: SSH Singapore SGL 1
-       url: http://sg-3.opentunnel.net/
-       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+     - name: XRAY Japan JPP 1
+       url: https://jpx-1.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/xray.png
        maxResponseTime: 5000
        expectedStatusCodes:
-        - 400
+        - 200
+        - 500
+     - name: XRAY Brazil BRP 1
+       url: https://brx-1.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/xray.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 200
+        - 500
+     - name: XRAY Russia RUL 1
+       url: https://rux-1.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/xray.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 200
+        - 500
+     - name: XRAY Singapore SGD 1
+       url: https://sgx-3.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/xray.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 200
+        - 500
+     - name: XRAY India IND 1
+       url: https://inx-1.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/xray.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 200
         - 500
      - name: V2RAY Singapore SGL 1
        url: https://sgv-1.openv2ray.com/
@@ -231,62 +259,6 @@ sites:
        expectedStatusCodes:
         - 200
         - 500
-     - name: XRAY Singapore SGL 1
-       url: https://sgx-1.openv2ray.com/
-       icon: https://opentunnel.net/assets/img/xray.png
-       maxResponseTime: 5000
-       expectedStatusCodes:
-        - 200
-        - 500
-     - name: XRAY Singapore SGO 1
-       url: https://sgx-2.openv2ray.com/
-       icon: https://opentunnel.net/assets/img/xray.png
-       maxResponseTime: 5000
-       expectedStatusCodes:
-        - 200
-        - 500
-     - name: XRAY United States USA 1
-       url: https://usx-1.openv2ray.com/
-       icon: https://opentunnel.net/assets/img/xray.png
-       maxResponseTime: 5000
-       expectedStatusCodes:
-        - 200
-        - 500
-     - name: XRAY South Korea KRP 1
-       url: https://krx-1.openv2ray.com/
-       icon: https://opentunnel.net/assets/img/xray.png
-       maxResponseTime: 5000
-       expectedStatusCodes:
-        - 200
-        - 500
-     - name: XRAY Netherlands NLI 1
-       url: https://nlx-1.openv2ray.com/
-       icon: https://opentunnel.net/assets/img/xray.png
-       maxResponseTime: 5000
-       expectedStatusCodes:
-        - 200
-        - 500
-     - name: XRAY Indonesia IDA 1
-       url: https://idx-1.openv2ray.com/
-       icon: https://opentunnel.net/assets/img/xray.png
-       maxResponseTime: 5000
-       expectedStatusCodes:
-        - 200
-        - 500
-     - name: XRAY Japan JPP 1
-       url: https://jpx-1.openv2ray.com/
-       icon: https://opentunnel.net/assets/img/xray.png
-       maxResponseTime: 5000
-       expectedStatusCodes:
-        - 200
-        - 500
-     - name: XRAY Brazil BRP 1
-       url: https://brx-1.openv2ray.com/
-       icon: https://opentunnel.net/assets/img/xray.png
-       maxResponseTime: 5000
-       expectedStatusCodes:
-        - 200
-        - 500
      - name: TROJAN Singapore SGV 1
        url: https://sgt-1.opensvr.net/
        icon: https://opentunnel.net/assets/img/trojan.png
@@ -336,26 +308,54 @@ sites:
        expectedStatusCodes:
         - 200
         - 500
-     - name: XRAY Russia RUL 1
-       url: https://rux-1.openv2ray.com/
-       icon: https://opentunnel.net/assets/img/xray.png
+     - name: SSH Singapore SGP 1
+       url: http://sg-1.opentunnel.net/
+       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
-        - 200
+        - 400
         - 500
-     - name: XRAY Singapore SGD 1
-       url: https://sgx-3.openv2ray.com/
-       icon: https://opentunnel.net/assets/img/xray.png
+     - name: SSH United States USA 1
+       url: http://us-1.opentunnel.net/
+       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
-        - 200
+        - 400
         - 500
-     - name: XRAY India IND 1
-       url: https://inx-1.openv2ray.com/
-       icon: https://opentunnel.net/assets/img/xray.png
+     - name: SSH Singapore SGS 1
+       url: http://sggs-1.opentunnel.net/
+       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
-        - 200
+        - 400
+        - 500
+     - name: SSH Germany DE 1
+       url: http://de-1.opentunnel.net/
+       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 400
+        - 500
+     - name: SSH Singapore SGP 2
+       url: http://sg-2.opentunnel.net/
+       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 400
+        - 500
+     - name: SSH Indonesia ID 1
+       url: http://id-1.opentunnel.net/
+       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 400
+        - 500
+     - name: SSH Singapore SGL 1
+       url: http://sg-3.opentunnel.net/
+       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 400
         - 500
      - name: OVPN Singapore SGP 1
        url: http://sgo-1.opensvr.net:5555/
@@ -405,16 +405,17 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: status.opentunnel.net
   # baseUrl: /your-repo-name
+  favicon: https://opentunnel.net/favicon.ico
   logoUrl: https://opentunnel.net/favicon.ico
   name: OpenTunnel.net - Server Status
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "Welcome to our **OpenTunnel.net** server status page. "
+  introMessage: You can get updates on how our systems are doing. If there are interruptions to service, we will post a note here.
   navbar:
     - title: Status
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
-  theme: light
+  theme: ocean
   
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
