--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -411,11 +411,11 @@ status-website:
   introTitle: "Welcome to our **OpenTunnel.net** server status page. "
   introMessage: You can get updates on how our systems are doing. If there are interruptions to service, we will post a note here.
   navbar:
-    - title: Status
-      href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
-  theme: ocean
+    - title: OpenTunnel
+      href: https://opentunnel.net
+    - title: Community
+      href: https://forum.opentunnel.net
+  theme: light
   
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
