--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -21,13 +21,6 @@ sites:
        maxResponseTime: 5000
        expectedStatusCodes:
         - 200
-     - name: XRAY 🇸🇬 Singapore SGL 1
-       url: https://sgx-1.openv2ray.com/
-       icon: https://opentunnel.net/assets/img/xray.png
-       maxResponseTime: 5000
-       expectedStatusCodes:
-        - 200
-        - 500
      - name: XRAY 🇸🇬 Singapore SGO 1
        url: https://sgx-2.openv2ray.com/
        icon: https://opentunnel.net/assets/img/xray.png
@@ -98,13 +91,6 @@ sites:
        expectedStatusCodes:
         - 200
         - 500
-     - name: V2RAY 🇸🇬 Singapore SGL 1
-       url: https://sgv-1.openv2ray.com/
-       icon: https://opentunnel.net/assets/img/V2Ray-icon.png
-       maxResponseTime: 5000
-       expectedStatusCodes:
-        - 200
-        - 500
      - name: V2RAY 🇸🇬 Singapore SGP 1
        url: https://sgv-2.openv2ray.com/
        icon: https://opentunnel.net/assets/img/V2Ray-icon.png
@@ -156,13 +142,6 @@ sites:
         - 500
      - name: V2RAY 🇷🇺 Russia RUL 1
        url: https://ruv-1.openv2ray.com/
-       icon: https://opentunnel.net/assets/img/V2Ray-icon.png
-       maxResponseTime: 5000
-       expectedStatusCodes:
-        - 200
-        - 500
-     - name: V2RAY 🇦🇺 Australia AUL 1
-       url: https://auv-1.openv2ray.com/
        icon: https://opentunnel.net/assets/img/V2Ray-icon.png
        maxResponseTime: 5000
        expectedStatusCodes:
@@ -350,13 +329,6 @@ sites:
        expectedStatusCodes:
         - 400
         - 500
-     - name: SSH 🇸🇬 Singapore SGL 1
-       url: http://sg-3.opentunnel.net/
-       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
-       maxResponseTime: 5000
-       expectedStatusCodes:
-        - 400
-        - 500
      - name: OVPN 🇸🇬 Singapore SGP 1
        url: http://sgo-1.opensvr.net:8080/
        icon: https://opentunnel.net/assets/img/openvpn.png
@@ -401,6 +373,13 @@ sites:
         - 500
      - name: OVPN 🇦🇪 United Arab Emirates AEM 1
        url: http://aeo-1.opensvr.net:8080/
+       icon: https://opentunnel.net/assets/img/openvpn.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 400
+        - 500
+     - name: OVPN 🇸🇬 Singapore SGD 1
+       url: http://sgo-3.opensvr.net:8080/
        icon: https://opentunnel.net/assets/img/openvpn.png
        maxResponseTime: 5000
        expectedStatusCodes:
