--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -21,6 +21,13 @@ sites:
        maxResponseTime: 5000
        expectedStatusCodes:
         - 200
+     - name: XRAY 🇸🇬 Singapore SGL 1
+       url: https://sgx-1.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/xray.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 200
+        - 500
      - name: XRAY 🇸🇬 Singapore SGO 1
        url: https://sgx-2.openv2ray.com/
        icon: https://opentunnel.net/assets/img/xray.png
@@ -91,6 +98,27 @@ sites:
        expectedStatusCodes:
         - 200
         - 500
+     - name: XRAY 🇩🇪 Germany DEH 1
+       url: https://dex-1.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/xray.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 200
+        - 500
+     - name: XRAY 🇨🇦 Canada CAO 1
+       url: https://cax-1.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/xray.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 200
+        - 500
+     - name: V2RAY 🇸🇬 Singapore SGL 1
+       url: https://sgv-1.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/V2Ray-icon.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 200
+        - 500
      - name: V2RAY 🇸🇬 Singapore SGP 1
        url: https://sgv-2.openv2ray.com/
        icon: https://opentunnel.net/assets/img/V2Ray-icon.png
@@ -142,6 +170,13 @@ sites:
         - 500
      - name: V2RAY 🇷🇺 Russia RUL 1
        url: https://ruv-1.openv2ray.com/
+       icon: https://opentunnel.net/assets/img/V2Ray-icon.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 200
+        - 500
+     - name: V2RAY 🇦🇺 Australia AUL 1
+       url: https://auv-1.openv2ray.com/
        icon: https://opentunnel.net/assets/img/V2Ray-icon.png
        maxResponseTime: 5000
        expectedStatusCodes:
@@ -324,6 +359,13 @@ sites:
         - 500
      - name: SSH 🇮🇩 Indonesia ID 1
        url: http://id-1.opentunnel.net/
+       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 400
+        - 500
+     - name: SSH 🇸🇬 Singapore SGL 1
+       url: http://sg-3.opentunnel.net/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
