--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -337,60 +337,95 @@ sites:
         - 200
         - 500
      - name: SSH 🇸🇬 Singapore SGP 1
-       url: http://sg-1.opentunnel.net/
+       url: http://sgs-4.opensvr.net/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇺🇸 United States USF 1
-       url: http://us-1.opentunnel.net/
+       url: http://uss-1.opensvr.net/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇸🇬 Singapore SGS 1
-       url: http://sggs-1.opentunnel.net/
+       url: http://sgs-1.opensvr.net/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇩🇪 Germany DEH 1
-       url: http://de-1.opentunnel.net/
+       url: http://des-1.opensvr.net/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇸🇬 Singapore SGP 2
-       url: http://sg-2.opentunnel.net/
+       url: http://sgs-2.opensvr.net/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇮🇩 Indonesia IDB 1
-       url: http://id-1.opentunnel.net/
+       url: http://ids-1.opensvr.net/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇸🇬 Singapore SGL 1
-       url: http://sg-3.opentunnel.net/
+       url: http://sgs-3.opensvr.net/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇫🇷 France FRO 1
-       url: http://fr-1.opentunnel.net/
+       url: http://frs-1.opensvr.net/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
+        - 500
+     - name: SSH 🇨🇦 Canada CAO 1
+       url: http://cas-1.opensvr.net/
+       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 400
+        - 500
+     - name: SSH 🇸🇬 Singapore SGD 1
+       url: http://sgs-5.opensvr.net/
+       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 400
+        - 500
+     - name: PPTP 🇸🇬 Singapore SGM 1
+       url: https://sgp-1.opensvr.net/
+       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 200
+        - 500
+     - name: PPTP 🇺🇸 United States USF 1
+       url: https://usp-1.opensvr.net/
+       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 200
+        - 500
+     - name: PPTP 🇮🇩 Indonesia IDB 1
+       url: https://idp-1.opensvr.net/
+       icon: https://opentunnel.net/assets/img/bitvise-ssh.png
+       maxResponseTime: 5000
+       expectedStatusCodes:
+        - 200
         - 500
      - name: OVPN 🇸🇬 Singapore SGP 1
        url: http://sgo-1.opensvr.net:8080/
