--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -337,70 +337,70 @@ sites:
         - 200
         - 500
      - name: SSH 🇸🇬 Singapore SGP 1
-       url: http://sgs-4.opensvr.net/
+       url: http://sgs-4.opensvr.net:8080/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇺🇸 United States USF 1
-       url: http://uss-1.opensvr.net/
+       url: http://uss-1.opensvr.net:8080/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇸🇬 Singapore SGS 1
-       url: http://sgs-1.opensvr.net/
+       url: http://sgs-1.opensvr.net:8080/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇩🇪 Germany DEH 1
-       url: http://des-1.opensvr.net/
+       url: http://des-1.opensvr.net:8080/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇸🇬 Singapore SGP 2
-       url: http://sgs-2.opensvr.net/
+       url: http://sgs-2.opensvr.net:8080/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇮🇩 Indonesia IDB 1
-       url: http://ids-1.opensvr.net/
+       url: http://ids-1.opensvr.net:8080/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇸🇬 Singapore SGL 1
-       url: http://sgs-3.opensvr.net/
+       url: http://sgs-3.opensvr.net:8080/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇫🇷 France FRO 1
-       url: http://frs-1.opensvr.net/
+       url: http://frs-1.opensvr.net:8080/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇨🇦 Canada CAO 1
-       url: http://cas-1.opensvr.net/
+       url: http://cas-1.opensvr.net:8080/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
         - 400
         - 500
      - name: SSH 🇸🇬 Singapore SGD 1
-       url: http://sgs-5.opensvr.net/
+       url: http://sgs-5.opensvr.net:8080/
        icon: https://opentunnel.net/assets/img/bitvise-ssh.png
        maxResponseTime: 5000
        expectedStatusCodes:
